[package]
name = "jetted"
version = "0.3.0"
authors = [
    "Isaac Harris-Holt <isaac@documatic.com>",
    "Ulysse Carion <ulysse@segment.com>",
]
edition = "2018"

[[bin]]
name = "jetted"
path = "src/main.rs"

[dependencies]
jetted_core = { path = "../core" }
jetted_target_csharp_system_text = { path = "../target_csharp_system_text" }
jetted_target_go = { path = "../target_go" }
jetted_target_java_jackson = { path = "../target_java_jackson" }
jetted_target_python = { path = "../target_python" }
jetted_target_ruby = { path = "../target_ruby" }
jetted_target_ruby_sig = { path = "../target_ruby_sig" }
jetted_target_rust = { path = "../target_rust" }
jetted_target_typescript = { path = "../target_typescript" }
jetted_target_php = { path = "../target_php" }
serde = "1.0"
serde_json = "1.0"
jtd = "0.2.1"
clap = { version = "2.33.3", features = ["yaml"] }
colored = "2.0.0"
anyhow = "1.0"
