[package]
name = "jetted_target_typescript"
version = "0.2.0"
authors = [
    "Isaac Harris-Holt <isaac@documatic.com>",
    "Ulysse Carion <ulysse@segment.com>",
]
edition = "2018"

[dependencies]
jetted_core = { path = "../core" }
lazy_static = "1.4.0"
serde_json = "1.0"
regex = "1"

[dev-dependencies]
jetted_test = { path = "../test" }
